--- a/pagination/arjjunk-pagination.html
+++ b/pagination/arjjunk-pagination.html
@@ -31,6 +31,7 @@
       border: 1px solid #ccc;
       margin: 5px 0;
       background-color: #f9f9f9;
+      color: #000;
     }
 
     .item.hidden {
@@ -48,6 +49,7 @@
       padding: 5px 10px;
       margin: 0 5px;
       border: 1px solid #ccc;
+      border-radius: 50%;
       background-color: #fff;
       cursor: pointer;
       transition: background-color 0.3s;
@@ -60,6 +62,9 @@
     .pagination button.disabled {
       background-color: #f1f1f1;
       cursor: not-allowed;
+    }
+    .pagination .page-count{
+      color: #fff;
     }
 </style>
 
@@ -90,8 +95,8 @@
       pagination.innerHTML = `
         <button class="prev ${currentPage === 1 ? 'disabled' : ''}" ${
         currentPage === 1 ? 'disabled' : ''
-      }>&lt;</button>
-        <span>Page ${currentPage} of ${totalPages}</span>
+      }> &lt; </button>
+        <span class="page-count">Page ${currentPage} of ${totalPages}</span>
         <button class="next ${currentPage === totalPages ? 'disabled' : ''}" ${
         currentPage === totalPages ? 'disabled' : ''
       }>&gt;</button>
